plugins {
  id 'org.springframework.boot' version '2.6.14'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-websocket'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
  implementation 'org.langrid:jp.go.nict.langrid.service.language_1_2:1.1.3'
  implementation 'org.langrid:service-ml:0.0.7'
  implementation 'org.langrid:jp.go.nict.langrid.client:1.1.3'
  implementation 'org.langrid:jp.go.nict.langrid.client.soap:1.1.3'
  implementation 'org.apache.httpcomponents:httpmime:4.5.13'
  implementation 'de.undercouch:bson4jackson:[2.13.1,)'
  implementation 'com.neovisionaries:nv-websocket-client:2.9'
  implementation 'com.google.guava:guava:31.1-jre'

  implementation 'com.google.auth:google-auth-library-oauth2-http:1.14.0'
  implementation 'com.google.cloud:google-cloud-texttospeech:2.7.0'

  compileOnly 'org.projectlombok:lombok'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
  useJUnitPlatform()
}
